tests/ui/fmt/struct-field-as-captured-argument.stderr
error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:11:23
   |
LL |     let _ = format!("{foo.field}");
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field}");
LL +     let _ = format!("{0}", foo.field);
   |

error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:12:23
   |
LL |     let _ = format!("{foo.field} {} {bar}", "aa");
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field} {} {bar}", "aa");
LL +     let _ = format!("{1} {} {bar}", "aa", foo.field);
   |

error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:13:23
   |
LL |     let _ = format!("{foo.field} {} {1} {bar}", "aa", "bb");
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field} {} {1} {bar}", "aa", "bb");
LL +     let _ = format!("{2} {} {1} {bar}", "aa", "bb", foo.field);
   |

error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:14:23
   |
LL |     let _ = format!("{foo.field} {} {baz}", "aa", baz = 3);
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field} {} {baz}", "aa", baz = 3);
LL +     let _ = format!("{1} {} {baz}", "aa", foo.field, baz = 3);
   |

error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:15:23
   |
LL |     let _ = format!("{foo.field:?} {} {baz}", "aa", baz = 3);
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field:?} {} {baz}", "aa", baz = 3);
LL +     let _ = format!("{1:?} {} {baz}", "aa", foo.field, baz = 3);
   |

error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:16:23
   |
LL |     let _ = format!("{foo.field:#?} {} {baz}", "aa", baz = 3);
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field:#?} {} {baz}", "aa", baz = 3);
LL +     let _ = format!("{1:#?} {} {baz}", "aa", foo.field, baz = 3);
   |

error: invalid format string: field access isn't supported
  --> $DIR/struct-field-as-captured-argument.rs:17:23
   |
LL |     let _ = format!("{foo.field:.3} {} {baz}", "aa", baz = 3);
   |                       ^^^^^^^^^ not supported in format string
   |
help: consider using a positional formatting argument instead
   |
LL -     let _ = format!("{foo.field:.3} {} {baz}", "aa", baz = 3);
LL +     let _ = format!("{1:.3} {} {baz}", "aa", foo.field, baz = 3);
   |

error: aborting due to 7 previous errors

